mule-user-guide/v/3.8/anypoint-enterprise-security-example-application.adoc
=  Anypoint企业安全示例应用程序
:keywords: anypoint, components, elements, security, aes

这个示例应用程序设计为一个简单的演示，提供了一些有关如何使用两个Anypoint Enterprise Security功能的深入见解：Mule数字签名处理器和Mule消息加密处理器。演示说明了如何使用Mule完成以下任务：

* 验证数字签名
* 加密消息负载的一部分
* 解密消息负载

== 先决条件

本文假定您有 link:/mule-user-guide/v/3.8/installing-anypoint-enterprise-security[安装了Anypoint Enterprise Security]个扩展。

它还假定您熟悉 link:/anypoint-studio/v/6/[Anypoint Studio]界面。要提高您对Studio的熟悉度，请考虑完成一个或多个 link:/getting-started/[Anypoint Studio快速入门]。

本文档描述了Mule图形用户界面（GUI）Anypoint Studio环境中的示例细节。在适当的情况下，XML配置遵循Studio界面屏幕截图。

== 导入应用程序

. 下载*{{0}}.*
. 启动*Anypoint Studio*。
. 在*File*菜单下，选择*Import...*
.  Studio打开导入向导。展开向导中的*Mule*文件夹，然后选择*Anypoint Studio generated Deployable Archive (.zip)*。点击*Next*。
+
[TIP]
如果您的操作系统自动解压缩应用程序，请选择*Anypoint Studio Project from External Location*而不是*Anypoint Studio generated Deployable Archive (.zip)*。
. 使用*Zip File*字段旁边的省略号按钮（...）浏览并选择您下载的Mule应用程序：` anypoint-enterprise-security-example.zip`。
. 点击*Finish*。 Studio导入，然后打开项目。

== 设置，然后运行应用程序

. 在*anypoint_enterprise_security_example*项目中，将Studio画布向下滚动到*Get_secret_file*流程。
. 双击*Groovy*组件以打开其*Pattern Properties*面板。
. 在*Script Text*字段中，调整`encrypted.txt`文件的文件路径以匹配系统的文件路径，然后点击*OK*保存更改。
. 点击Studio中的*Save*图标以保存该项目。
. 在*Package Explorer*中，右键单击项目名称，然后选择*Run As*> *Mule Application*。
.  Mule运行应用程序。在控制台中，它显示以下消息：`Started anypoint_enterprise_security_example app`

== 它是如何工作的

*Encrypted Message Producer*应用程序由三个简单的 link:/mule-user-guide/v/3.8/mule-application-architecture[流动]组成，每个 link:/mule-user-guide/v/3.8/mule-application-architecture[流动]都充当Web服务提供者，它在将响应返回给调用者之前对消息进行加密或解密。根据功能组织，这些流程在应用程序中用于不同的目的。

*  *Get_CC_information*接收客户信用卡信息的Web服务请求，并将其检索，加密并返回给调用者。 （请参阅下面的图片，顶部。）
*  *Decrypt_The_Request*对收到的消息进行解密，记录解密活动，然后将未加密的消息内容（本例中为信用卡信息）返回给调用者。 （见下图，中间。）
*  *Get_secret_file*根据请求解密文件的内容，然后向调用者返回一个响应，显示解密后的文件内容。 （见下图，底部。）
+
image:full+example+flow.png[全+例子+流]

=== 查看XML

[source,xml, linenums]
----
<?xml version="1.0" encoding="UTF-8"?>
<mule xmlns:spring="http://www.springframework.org/schema/beans" xmlns:secure-property-placeholder="http://www.mulesoft.org/schema/mule/secure-property-placeholder"
    xmlns:scripting="http://www.mulesoft.org/schema/mule/scripting"
    xmlns:encryption="http://www.mulesoft.org/schema/mule/encryption"
    xmlns:signature="http://www.mulesoft.org/schema/mule/signature"
    xmlns:http="http://www.mulesoft.org/schema/mule/http"
    xmlns="http://www.mulesoft.org/schema/mule/core"
    xmlns:doc="http://www.mulesoft.org/schema/mule/documentation"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://www.mulesoft.org/schema/mule/http http://www.mulesoft.org/schema/mule/http/current/mule-http.xsd
http://www.mulesoft.org/schema/mule/signature http://www.mulesoft.org/schema/mule/signature/current/mule-signature.xsd
http://www.mulesoft.org/schema/mule/encryption http://www.mulesoft.org/schema/mule/encryption/current/mule-encryption.xsd
http://www.mulesoft.org/schema/mule/scripting http://www.mulesoft.org/schema/mule/scripting/current/mule-scripting.xsd
http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd
http://www.mulesoft.org/schema/mule/secure-property-placeholder http://www.mulesoft.org/schema/mule/secure-property-placeholder/current/mule-secure-property-placeholder.xsd
http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-current.xsd" >

    <signature:config name="Signature" enableLanguage="true" doc:name="Signature">
        <signature:jce-signer-config algorithm="HmacMD5" key="JLfl5sER3kt4oVkzP2d39UQrUxrEK63LjmXAO45b6cU=" />
    </signature:config>

    <encryption:config name="plainXml" doc:name="Encryption" enableLanguage="true" >
        <encryption:xml-encrypter-config algorithm="AES_128" key="pNVDBAtJ8S8mXfHc" xpath="/user/cc" />
    </encryption:config>

    <encryption:config name="e" enableLanguage="true" doc:name="Encryption">
        <encryption:jce-encrypter-config algorithm="CAST5" key="poso123456789lal" />
    </encryption:config>

    <encryption:config name="symmetricPlain" doc:name="Encryption">
        <encryption:jce-encrypter-config key="${xml.encrypter.key}" />
    </encryption:config>

    <encryption:config name="Encryption" doc:name="Encryption" />

    <http:listener-config name="HTTP_Listener_Configuration" host="localhost" port="8081" doc:name="HTTP Listener Configuration"/>

    <flow name="Get_CC_information" >
        <http:listener config-ref="HTTP_Listener_Configuration" path="/" doc:name="HTTP Connector"/>
        <expression-filter
            expression="#[message.inboundProperties.'http.query.params'.token != null  &amp;&amp; message.inboundProperties.'http.query.params'.user !=null ]"
            doc:name="Expression" />
        <signature:verify-signature config-ref="Signature"
            input-ref="#[message.inboundProperties.'http.query.params'.user]" expectedSignature="#[message.inboundProperties.'http.query.params'.token]"
            doc:name="Verify User Signature"
            doc:description="Verify if the Signature is correct, so we can validate the User" />
        <set-payload
            value="#[new String(&quot;&lt;user&gt;&lt;name&gt;Royal Bank of Canada&lt;/name&gt;&lt;id&gt;Royal_Bank_Of_Canada&lt;/id&gt;&lt;cc&gt;&lt;company&gt;Visa&lt;/company&gt;&lt;number&gt;1234567890&lt;/number&gt;&lt;secret&gt;123&lt;/secret&gt;&lt;/cc&gt;&lt;/user&gt;&quot;)]"
            doc:name="Create XML response based on User" />
        <encryption:encrypt config-ref="plainXml" input-ref="#[payload.toString()]" using="XML_ENCRYPTER" doc:name="Encrypt the XML (only th CC Info)"/>
    </flow>

    <flow name="Decrypt_The_Request" >
        <http:listener config-ref="HTTP_Listener_Configuration" path="decrypt" doc:name="HTTP Connector"/>
        <object-to-string-transformer doc:name="Object to String" />
        <encryption:decrypt config-ref="plainXml" using="XML_ENCRYPTER" doc:name="Decrypt the xml payload" />
        <logger level="INFO" message="#[new String(e.jce().encrypt(payload))]" doc:name="Log the return but encrypted" />
    </flow>

    <flow name="Get_secret_file" >
        <http:listener config-ref="HTTP_Listener_Configuration" path="getFile" doc:name="HTTP Connector"/>
        <expression-filter
            expression="#[message.inboundProperties.'http.query.params'.token] != null &amp;&amp; message.inboundProperties.'http.query.params'.user] !=null ]"
            doc:name="Expression" />
        <signature:verify-signature config-ref="Signature"
            input-ref="#[message.inboundProperties.'http.query.params'.user]" expectedSignature="#[message.inboundProperties.'http.query.params'.token]"
            doc:name="Verify User Signature"
            doc:description="Verify if the Signature is correct, so we can validate the User" />
        <scripting:component doc:name="Look for Encrypted Message">
            <scripting:script engine="Groovy">
                <scripting:text><![CDATA[return new FileInputStream('src/test/resources/encrypted.txt');]]></scripting:text>
             </scripting:script>
        </scripting:component>         <encryption:decrypt config-ref="symmetricPlain" doc:name="Decrypt Message" />
    </flow> </mule>
----

确保右键点击任何 link:/mule-user-guide/v/3.8/mule-message-encryption-processor[Mule消息加密处理器]，然后选择`Add Encryption libraries to the project`。

image:add-encryption-libraries.png[添加加密程序库]

以下各节提供Anypoint Enterprise Security功能在每个流程处理最终用户请求时的操作说明。

===  Get_CC_Information流

==== 申请

从浏览器中，最终用户通过URL向Mule应用程序提交请求以获取客户的信用卡信息。要提交此请求，请打开浏览器并在地址栏中键入以下内容：

`+http://localhost:8081/?user=Royal_Bank_of_Canada&token=z/TKVFswDDOQw2kjW9Y4jQ==+`

==== 处理

在收到HTTP请求后，该流程将其传递给使用MEL表达式的筛选器，以验证其查询参数中包含用户和标记。

然后它使用Mule数字签名处理器来验证消息发送者的身份。 Mule将它接收到的令牌作为请求的参数（请求的URL中的令牌）进行评估。下表介绍了数字签名处理器的配置。

[cols="2*"]
|===
|配置参考 |引用*Signature*全局数字签名元素
|操作 |指示元素验证签名，而不是应用签名
|输入参考 |使用Mule表达式来定义数字签名适用的有效负载部分
|预期签名 |使用Mule Expression来定义Mule用于验证签名的参数
|===

image:example+signature+1.png[例如+签名+ 1]

[source,xml, linenums]
----
<signature:verify-signature config-ref="Signature"
            input-ref="#[message.inboundProperties.'http.query.params'.user]" expectedSignature="#[message.inboundProperties.'http.query.params'.token]"
            doc:name="Verify User Signature"
            doc:description="Verify if the Signature is correct, so we can validate the User" />
----

[NOTE]
====
*What is a Global Element?*

Mule使用*Global Elements*，如本例中的*Signature*全局元素，指定传输细节并设置可重用配置。

您可以创建一个全局元素来详细说明您的配置或传输细节，而不是重复编写相同的代码以将相同的配置应用于多个消息处理器。然后，您可以指示Mule应用程序中的任意数量的消息处理器引用该全局元素。

学到更多...

在此示例中，指定加密策略，算法和密钥的代码在“预定”流程中不存在;相反，该代码位于应用程序XML配置文件顶部的全局元素中（以及位于*Global Elements*选项卡中的内容中）。 Get_CC_Information流中的Verify User Signature元素引用并使用此全局元素中定义的配置（请参阅下面的可展开部分中的代码）。

image:global_signature.png[global_signature]

====

===== 查看全球签名元素的XML

验证请求者有效后，Mule使用表达式将消息的有效负载设置为银行和信用卡信息。 （此功能是模拟从数据库中检索客户信用卡信息的一种简单方法。由于实际原因，信用卡详细信息被硬编码到应用程序中。）

Mule首先使用Mule Message Encryption Processor对原始信用卡信息进行编码，而不是将原始信用卡信息返回给调用者。使用XML加密策略，Mule加密消息有效载荷。下表介绍了加密器的配置。

[source,xml, linenums]
----
<signature:config name="Signature"  enableLanguage="true" doc:name="Signature">
    <signature:jce-signer algorithm="HmacMD5" key="JLfl5sER3kt4oVkzP2d39UQrUxrEK63LjmXAO45b6cU="/>
    </signature:config>
----

[cols="2*"]
|===
|配置参考 |引用*plainXML*全局加密元素
|操作 |指示该元素加密，而不是解密消息
|输入引用 |指示Mule加密有效负载并以字符串形式显示
|使用 |指示加密策略
|===

image:encrypt1.png[encrypt1]

消息加密处理器引用*plainXML*全局加密元素以根据以下配置进行操作：

* 启用语言
* 键（加密键）
*  xpath表达式，用于指示要加密的有效内容中的字段
* 算法（加密算法）+
+
image:global_XML_encrypt.png[global_XML_encrypt]

[source,xml, linenums]
----
<signature:config name="Signature"  enableLanguage="true" doc:name="Signature">
    <signature:jce-signer algorithm="HmacMD5" key="JLfl5sER3kt4oVkzP2d39UQrUxrEK63LjmXAO45b6cU="/>
    </signature:config>
----

==== 响应

最后，Mule使用HTTP连接器将响应加密的信用卡信息传递给最终用户的浏览器。下图中突出显示的内容提供加密的信用卡信息。

image:get_cc_info_response.png[get_cc_info_response]

===  Decrypt_The_Request流

==== 申请

最终用户向Mule应用程序提交请求以解密消息有效负载，以获取客户未加密的信用卡信息。使用HTTP请求工具（例如Chrome网络浏览器中的 link:https://chrome.google.com/webstore/detail/rest-console/cokgbflfommojglbmbpenpphppikmonn[REST控制台插件]）将以下请求发布到`+http://localhost:8081/decrypt+`

[source,xml, linenums]
----
<?xml version="1.0" encoding="UTF-8"?>
<user>
    <name>Royal Bank of Canada</name>
    <id>Royal_Bank_Of_Canada</id>
    <cc>
        <xenc:EncryptedData Type="http://www.w3.org/2001/04/xmlenc#Content" xmlns:xenc="http://www.w3.org/2001/04/xmlenc#">
            <xenc:EncryptionMethod Algorithm="http://www.w3.org/2001/04/xmlenc#aes128-cbc" xmlns:xenc="http://www.w3.org/2001/04/xmlenc#"/>
            <ds:KeyInfo xmlns:ds="http://www.w3.org/2000/09/xmldsig#">
                <xenc:EncryptedKey xmlns:xenc="http://www.w3.org/2001/04/xmlenc#"> 
                    <xenc:EncryptionMethod Algorithm="http://www.w3.org/2001/04/xmlenc#kw-aes128" xmlns:xenc="http://www.w3.org/2001/04/xmlenc#"/>
                    <xenc:CipherData xmlns:xenc="http://www.w3.org/2001/04/xmlenc#">
                        <xenc:CipherValue xmlns:xenc="http://www.w3.org/2001/04/xmlenc#">9eUu9/kVzwb4ExPxr2UTiugRKoU6oJE9</xenc:CipherValue>
                    </xenc:CipherData>
                </xenc:EncryptedKey>
            </ds:KeyInfo>
            <xenc:CipherData xmlns:xenc="http://www.w3.org/2001/04/xmlenc#"><xenc:CipherValue xmlns:xenc="http://www.w3.org/2001/04/xmlenc#">cUmSEUP5M/OJsIS9MQvX3tMPBk9MgEo1yu2yGDc8swPVuTcs67nwFi25Yak86v+21I1Y98amjseX
5jU4hTz3eJXqd3AVkvTsWA/3d79yoY/c1CyOiTenlSw38+kHQ+JR</xenc:CipherValue>
            </xenc:CipherData>
        </xenc:EncryptedData>
    </cc>
</user>
----

==== 处理

在接受来自最终用户的HTTP请求之后，Mule将消息有效载荷从Java对象转换为字符串，然后使用Mule消息加密处理器来解密消息有效载荷。

使用XML加密策略，Mule在记录解密活动之前解密消息负载。然后Mule向呼叫者返回一个响应，其中包含未加密的信用卡数据。下表介绍了解密器的配置。

[cols="2*"]
|===
|配置参考 |引用*plainXML*全局加密元素
|操作 |指示该元素解密，而不是加密消息
|使用 |的加密器指示加密策略
|===

image:decrypt1.png[decrypt1]

[source,xml, linenums]
----
<encryption:decrypt config-ref="plainXml" using="XML_ENCRYPTER" doc:name="Decrypt the xml payload"/>
----

消息加密处理器引用*plainXML*全局加密元素以根据以下配置进行操作：

* 启用语言
* 键（加密键）
*  xpath表达式，用于指示要解密的有效内容中的字段
* 算法（加密算法）

==== 响应

最后，Mule使用HTTP连接器将响应 - 解密后的信用卡信息传递给最终用户的浏览器。下面的代码显示未加密的信用卡信息。

[source,xml, linenums]
----
<?xml version="1.0" encoding="UTF-8"?>
<user>
    <name>Royal Bank of Canada</name>
    <id>Royal_Bank_Of_Canada</id>
    <cc>
        <company>Visa</company>
        <number>1234567890</number>
        <secret>123</secret>
    </cc>
</user>
----

===  Get_secret_file流

==== 申请

从浏览器中，最终用户通过URL向Mule应用程序提交请求，以解密特定文件的内容，然后将解密后的内容显示给用户。要提交此请求，请打开浏览器并在地址栏中键入以下内容：

`+http://localhost:8081/getFile?user=Royal_Bank_of_Canada&token=z/TKVFswDDOQw2kjW9Y4jQ==+`

==== 处理

接收到HTTP请求后，此流程将以与*Get_CC_Information*流程非常相似的方式首先运行过滤器，以验证用户和令牌查询参数是否存在。然后它使用Mule数字签名处理器来验证消息发送者的身份。

接下来，Mule使用Groovy脚本来查找包含要解密数据的文件（本例中为`src`> `test`> `resources`文件夹中的`encryption.txt`文件） 。然后它将文件内容传递给Mule消息加密处理器进行解密。

处理器引用*symmetricPlain*全局加密元素以指导如何解密文件内容。 *symmetricPlain*元素使用JCE加密策略（如*Default*字段中的`BINARY_ENCRYPTER`选项所示），提供加密密钥并定义加密算法。

==== 响应

最后，Mule使用HTTP连接器将响应（`encrypted.txt`文件中的解密消息）传递给最终用户的浏览器（参见下图）。

image:get_secret_file_response.png[get_secret_file_response]

== 另请参阅

* 有关Mule加密的更多信息，请参阅 link:/mule-user-guide/v/3.8/mule-message-encryption-processor[Mule消息加密处理器]。
* 有关Mule签名的更多信息，请参阅 link:/mule-user-guide/v/3.8/mule-digital-signature-processor[Mule数字签名处理器]。
*  https://docs.mulesoft.com/mule-user-guide/v/3.8/maven-tools-for-mule-esb [Maven Tools for Mule]




